# beeai

./: .cursorrules  .gitignore  .shellrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  OPERATING.MD  README.md  REFACTORING_SUMMARY.md  WEB_SEARCH_IMPLEMENTATION_COMPLETE.md  agents.yaml  debug_events.py  dev-setup.sh  diagnose_langfuse.py  docker-compose.yml  mcp_server.py  observability.py  pyproject.toml  requirements.txt  run_agent.py  run_agent_ollama.py  run_agent_ui.py  run_tests.sh  start-server.sh
.github/: pull_request_template.md
agent_ui/: .gitignore  __init__.py  agent_runner.py  cache.py  conftest.py  manage.py  populate_idv_data.py  run_uvicorn.py  uvicorn_log_config.yaml
agents/: __init__.py  base.py  registry.py
context/: AGENT_GUIDELINES.md  CONTEXT.md  README.md  USE_CASES.md  WORKFLOW_GUIDELINES.md
data/: DATABASE_SETUP.md  README.md
diagrams/: realtyIQ.drawio  realtyIQ.html
docs/: COMMANDS.md  DOCUMENTATION_RENDERING_IMPROVEMENTS.md  IDEAS_UX_TOOLS_AGENTS.md  README.md  REORGANIZATION_USER_DEVELOPER.md  ROADMAP.md  SPECS.md  TROUBLESHOOTING.md
piper_tts/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  openapi.yaml  requirements.txt
prometheus/: README.md  blackbox.yml  prometheus.yml
prompts/: README.md  examples.txt
scripts/: import_sam_data.py  rebuild_all_databases.py  test_bi_agent.py  verify_dap_workflow.py
tests/: QUICK_START.md  README.md  conftest.py  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.js  test.curls.md  test_00_environment.py  test_admin_dashboard.py  test_auction_bidders.py  test_auction_dashboard.py  test_auction_total_bids.py  test_auction_watchers.py  test_bid_history.py  test_get_auction_types.py  test_get_property_detail.py  test_get_site_detail.py  test_list_agents.py  test_list_asset_types.py  test_list_properties.py  test_list_properties_live.py  test_list_property_types.py  test_list_tools.py  test_property_count_summary.py  test_property_registration_graph.py
tools/: __init__.py  _auction_api.py  admin_dashboard.py  (+32 more)
(+512 files in other folders)
