[project]
name = "realtyiq"
version = "1.3.0"
description = "RealtyIQ - GSA Real Estate Sales Auction Assistant"
requires-python = ">=3.10"

[tool.ruff]
# Target Python 3.10+
target-version = "py310"

# Max line length
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "dist",
    "build",
    "migrations",
    "node_modules",
]

[tool.ruff.lint]
# Enable rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # mccabe complexity
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "PIE", # flake8-pie
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]

# Disable specific rules that may be too strict
ignore = [
    "E402",   # Module import not at top of file
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert (OK in tests)
    "S105",   # Possible hardcoded password (false positives)
    "S106",   # Possible hardcoded password (false positives)
    "DTZ003", # datetime.utcnow() (OK for our use case)
    "B008",   # Function call in argument defaults (common Django pattern)
    "RET504", # Unnecessary variable assignment before return
]

# Complexity settings
[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity (default is 10)
max-complexity = 10

[tool.ruff.lint.isort]
# isort configuration
known-first-party = ["agents", "tools", "agent_ui", "agent_app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Formatting options
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Respect existing formatting for these
skip-magic-trailing-comma = false
